--- a/deployment/templates/wso2am-pattern-1-am-secrets.yaml
+++ b/deployment/templates/wso2am-pattern-1-am-secrets.yaml
@@ -1,4 +1,4 @@
-{{ if and (not (eq .Values.wso2.subscription.username "")) (not (eq .Values.wso2.subscription.password "")) }}
+{{ if and (not (eq .Values.azure.subscription.username "")) (not (eq .Values.azure.subscription.password "")) }}
 # Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,10 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $username := .Values.wso2.subscription.username }}
-{{- $password := .Values.wso2.subscription.password }}
-{{- $email := .Values.wso2.subscription.username }}
-{{- $regId := default "docker.wso2.com" .Values.wso2.deployment.am.dockerRegistry }}
+{{- $username := .Values.azure.subscription.username }}
+{{- $password := .Values.azure.subscription.password }}
+{{- $email := .Values.azure.subscription.username }}
+{{- $regId := default "docker.wso2.com" .Values.wso2.deployment.am.containerRegistry }}
 {{- $auth := printf "%s:%s" $username $password | b64enc }}
 {{- $files := .Files }}
 apiVersion: v1
