--- a/deployment/templates/wso2am-pattern-1-am-secrets.yaml
+++ b/deployment/templates/wso2am-pattern-1-am-secrets.yaml
@@ -26,5 +26,5 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
-  .dockerconfigjson: {{ $files.Get "auth.json" | replace "reg.id" $regId | replace "docker.wso2.com.username" $username | replace "docker.wso2.com.password" $password | replace "docker.wso2.com.email" $email | replace "docker.wso2.com.auth" $auth | b64enc }}
+  .dockerconfigjson: {{ $files.Get "auth.json" | replace "reg.id" $regId | replace "azure.container.username" $username | replace "azure.container.password" $password | replace "azure.container.username" $email | replace "azure.container.auth" $auth | b64enc }}
 {{ end }}
