--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 infrastructure/.terraform
+infrastructure/terraform.tfstate
+infrastructure/terraform.tfstate.backup
+infrastructure/.terraform.lock.hcl
