made some changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-infrastructure/.terraform
-infrastructure/terraform.tfstate
-infrastructure/terraform.tfstate.backup
-infrastructure/.terraform.lock.hcl
+infrastructuresdfsdf/.terraform
+infrastructuresdfsdf/terraform.tfstate
+infrastructuresdfsdf/terraform.tfstate.backup
+infrastructuresdfsdf/.terraform.lock.hcl
