--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-infrastructuresdfsdf/.terraform
-infrastructuresdfsdf/terraform.tfstate
-infrastructuresdfsdf/terraform.tfstate.backup
-infrastructuresdfsdf/.terraform.lock.hcl
+infrastructure/.terraform
+infrastructure/terraform.tfstate
+infrastructure/terraform.tfstate.backup
+infrastructure/.terraform.lock.hcl
+infrastructuresdfsdf
