--- a/deployment/templates/wso2am-pattern-1-am-secrets.yaml
+++ b/deployment/templates/wso2am-pattern-1-am-secrets.yaml
@@ -1,4 +1,4 @@
-{{ if and (not (eq .Values.azure.subscription.username "")) (not (eq .Values.azure.subscription.password "")) }}
+{{ if and (not (eq .Values.wso2.subscription.username "")) (not (eq .Values.wso2.subscription.password "")) }}
 # Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,10 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $username := .Values.azure.subscription.username }}
-{{- $password := .Values.azure.subscription.password }}
-{{- $email := .Values.azure.subscription.username }}
-{{- $regId := default "docker.wso2.com" .Values.wso2.deployment.am.containerRegistry }}
+{{- $username := .Values.wso2.subscription.username }}
+{{- $password := .Values.wso2.subscription.password }}
+{{- $email := .Values.wso2.subscription.username }}
+{{- $regId := default "docker.wso2.com" .Values.wso2.deployment.am.dockerRegistry }}
 {{- $auth := printf "%s:%s" $username $password | b64enc }}
 {{- $files := .Files }}
 apiVersion: v1
@@ -26,5 +26,5 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
-  .dockerconfigjson: {{ $files.Get "auth.json" | replace "reg.id" $regId | replace "azure.container.username" $username | replace "azure.container.password" $password | replace "azure.container.username" $email | replace "azure.container.auth" $auth | b64enc }}
+  .dockerconfigjson: {{ $files.Get "auth.json" | replace "reg.id" $regId | replace "docker.wso2.com.username" $username | replace "docker.wso2.com.password" $password | replace "docker.wso2.com.email" $email | replace "docker.wso2.com.auth" $auth | b64enc }}
 {{ end }}
