--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -12,15 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-azure:
-  # Azure Subscription parameters
-  # If provided, these parameters will be used to obtain official Docker images available at azure Private container Registry
+wso2:
+  # WSO2 Subscription parameters (https://wso2.com/subscription/)
+  # If provided, these parameters will be used to obtain official WSO2 product Docker images available at WSO2 Private Docker Registry (https://docker.wso2.com/)
   # for this deployment
   subscription:
     username: ""
     password: ""
 
-wso2:
   # WSO2 Choreo Analytics Parameters
   # If provided, these parameters will be used publish analytics data to Choreo Analytics environment (https://apim.docs.wso2.com/en/latest/observe/api-manager-analytics/configure-analytics/register-for-analytics/).
   choreoAnalytics:
@@ -57,8 +56,8 @@ wso2:
 
     am:
       # Container image configurations
-      # If a custom image must be used, uncomment 'containerRegistry' and provide its value
-      containerRegistry: "cstimage.azurecr.io" 
+      # If a custom image must be used, uncomment 'dockerRegistry' and provide its value
+      dockerRegistry: "cstimage.azurecr.io"
       imageName: ""
       imageTag: "latest"
       # Refer to the Kubernetes documentation on updating images (https://kubernetes.io/docs/concepts/containers/images/#updating-images)
@@ -112,7 +111,7 @@ wso2:
           hostname: "am.wso2.com"
           # Annotations for the API Manager Publisher-DevPortal services Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
             nginx.ingress.kubernetes.io/affinity: "cookie"
             nginx.ingress.kubernetes.io/session-cookie-name: "route"
@@ -123,21 +122,21 @@ wso2:
           hostname: "gateway.am.wso2.com"
           # Annotations for the API Manager Gateway service Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         websub:
           enabled: true
           hostname: "websub.am.wso2.com"
           # Annotations for the API Manager WebSub service Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         websocket:
           enabled: true
           hostname: "websocket.am.wso2.com"
           # Annotations for the API Manager WebSocket service Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       db:
         hostname: wso2am-mysql-db-service
@@ -153,6 +152,67 @@ wso2:
           username: wso2carbon
           password: wso2carbon
           url: jdbc:mysql://wso2am-mysql-db-service:3306/WSO2AM_SHARED_DB?useSSL=false&amp;autoReconnect=true&amp;requireSSL=false&amp;verifyServerCertificate=false
+
+    mi:
+      # If a custom image must be used, uncomment 'dockerRegistry' and provide its value.
+      dockerRegistry: "docker.wso2.com"
+      imageName: "wso2mi"
+      imageTag: "4.2.0.0"
+      # Number of deployment replicas
+      replicas: 2
+      strategy:
+        rollingUpdate:
+          # The maximum number of pods that can be scheduled above the desired number of pods.
+          maxSurge: 1
+          # The maximum number of pods that can be unavailable during the update.
+          maxUnavailable: 0
+      # Indicates whether the container is running.
+      livenessProbe:
+        # Number of seconds after the container has started before liveness probes are initiated.
+        initialDelaySeconds: 35
+        # How often (in seconds) to perform the probe.
+        periodSeconds: 10
+      # Indicates whether the container is ready to service requests.
+      readinessProbe:
+        # Number of seconds after the container has started before readiness probes are initiated.
+        initialDelaySeconds: 35
+        # How often (in seconds) to perform the probe.
+        periodSeconds: 10
+      # These are the minimum resource recommendations for running WSO2 Micro Integrator
+      resources:
+        requests:
+          # The minimum amount of memory that should be allocated for a Pod
+          memory: "512Mi"
+          # The minimum amount of CPU that should be allocated for a Pod
+          cpu: "500m"
+        limits:
+          # The maximum amount of memory that should be allocated for a Pod
+          memory: "1Gi"
+          # The maximum amount of CPU that should be allocated for a Pod
+          cpu: "1000m"
+      # Environment variables for the Micro integrator deployment.
+      envs:
+      #  ENV_NAME: ENV_VALUE
+
+      # Add the customized deployment configurations for the WSO2 MI v4.2.0 (<WSO2MI>/conf/deployment.toml)
+      # config:
+      #   deployment.toml: |-
+      #     # toml configurations for the WSO2 MI v4.2.0
+
+      # Configure synapse testing.
+      synapseTest:
+        enabled: false
+
+      # Configure Ingresses
+      ingress:
+        # Configure management ingress
+        management:
+          # Hostname for the Micro Integrator management endpoint.
+          hostname: "management.mi.wso2.com"
+          # Annotations for the Micro Integrator management Ingress.
+          annotations:
+            kubernetes.io/ingress.class: "nginx"
+            nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 
 kubernetes:
   # Name of Kubernetes service account
