--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -58,7 +58,7 @@ wso2:
       # Container image configurations
       # If a custom image must be used, uncomment 'dockerRegistry' and provide its value
       dockerRegistry: "cstimage.azurecr.io"
-      imageName: ""
+      imageName: "wso2am-vanilla"
       imageTag: "latest"
       # Refer to the Kubernetes documentation on updating images (https://kubernetes.io/docs/concepts/containers/images/#updating-images)
       imagePullPolicy: Always
@@ -111,7 +111,7 @@ wso2:
           hostname: "am.wso2.com"
           # Annotations for the API Manager Publisher-DevPortal services Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
             nginx.ingress.kubernetes.io/affinity: "cookie"
             nginx.ingress.kubernetes.io/session-cookie-name: "route"
@@ -122,21 +122,21 @@ wso2:
           hostname: "gateway.am.wso2.com"
           # Annotations for the API Manager Gateway service Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         websub:
           enabled: true
           hostname: "websub.am.wso2.com"
           # Annotations for the API Manager WebSub service Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         websocket:
           enabled: true
           hostname: "websocket.am.wso2.com"
           # Annotations for the API Manager WebSocket service Ingress
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       db:
         hostname: wso2am-mysql-db-service
@@ -211,7 +211,7 @@ wso2:
           hostname: "management.mi.wso2.com"
           # Annotations for the Micro Integrator management Ingress.
           annotations:
-            spec.ingressClassName: "nginx"
+            kubernetes.io/ingress.class: "nginx"
             nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 
 kubernetes:
